Добавлены авторизация, регистрация, профиль клиента

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,60 @@
 <resources>
-    <string name="app_name">GlamVibe Client</string>
+    <string name="app_name" translatable="false">GlamVibe Client</string>
+    <string name="authorization_textview">Enter login and password</string>
+    <string name="login_hint">Login</string>
+    <string name="password_hint">Password</string>
+    <string name="authorization_button">Sign in</string>
+    <string name="avatar_content_description">Profile photo</string>
+    <string name="exit">Exit</string>
+    <string name="exit_content_description">Exit</string>
+    <string name="arrow_forward_content_description">Arrow forward</string>
+    <string name="profile">My data</string>
+    <string name="add_button_description">Add appointment</string>
+    <string name="main_menu">Main</string>
+    <string name="profile_menu">Profile</string>
+    <string name="favourites_menu">Favourites</string>
+    <string name="catalog_menu">Catalog</string>
+    <string name="registration_button">Sign up</string>
+    <string name="form_content_description">Form</string>
+    <string name="appointments">Appointments</string>
+    <string name="network_error">Network error</string>
+    <string name="unknown_error">Unknown error</string>
+    <string name="snackbar_action_text">Repeat</string>
+    <string name="profile_data_textview">My data</string>
+    <string name="hint_lastname">Lastname</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_patronymic">Patronymic</string>
+    <string name="hint_birth_date">Birth date</string>
+    <string name="hint_email" translatable="false">Email <font color="#FF0000">*</font></string>
+    <string name="hint_phone">Phone</string>
+    <string name="hint_login">Login</string>
+    <string name="hint_password">Password</string>
+    <string name="edit_profile_data_button">Edit</string>
+    <string name="save_changes_profile_data_button">Save changes</string>
+    <string name="profile_personal_data_textview">Personal data</string>
+    <string name="profile_contact_data_textview">Contact data</string>
+    <string name="profile_credentials_textview">Credentials</string>
+    <string name="change_profile_credentials_textview">Enter a new login or password if you want to change them.</string>
+    <string name="registration_textview">Registration</string>
+    <string name="registration_button_text">Registrate</string>
+    <string name="hint_login_registration">Login</string>
+    <string name="hint_password_registration">Password</string>
+    <string name="registration_form_textview">Form</string>
+    <string name="complete_registration_form_textview">If you wish, you can fill out a form that will be used to select recommendations.</string>
+    <string name="form_skin_type_textview">1. Skin type</string>
+    <string name="form_hair_type_textview">2. Hair type</string>
+    <string name="form_skin_type_oily">Oily</string>
+    <string name="form_skin_type_dry">Dry</string>
+    <string name="form_skin_type_normal">Normal</string>
+    <string name="form_skin_type_combination">Combination</string>
+    <string name="form_hair_type_normal">Normal</string>
+    <string name="form_hair_type_dry">Dry</string>
+    <string name="form_hair_type_oily">Oily</string>
+    <string name="form_hair_type_colored">Colored</string>
+    <string name="form_hair_type_damaged">Damaged</string>
+    <string name="form_upcoming_events_textview">3. Upcoming events</string>
+    <string name="form_upcoming_events_wedding">Wedding</string>
+    <string name="form_upcoming_events_holiday">Holiday</string>
+    <string name="form_upcoming_events_photoshoot">Photoshoot</string>
+    <string name="app_logo_content_description">App logo</string>
 </resources>
