--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,7 +96,11 @@
     <string name="reschedule_appointment_title">Выберите новую дату и время записи</string>
     <string name="reschedule_button">Перенести запись</string>
     <string name="service_appointment_title">Услуга:</string>
-    <string name="reschedule_appointment_fragment">Перенос записи</string>
-    <string name="available_time_title">Доступное время</string>
+    <string name="reschedule_appointment_fragment">Rescheduling the appointment</string>
+    <string name="available_time_title">Available times</string>
     <string name="no_available_time_title">В выбранный день нет доступных часов для записи</string>
+    <string name="make_appointment_button">Make an appointment</string>
+    <string name="make_appointment_service_title">Выберите услугу</string>
+    <string name="make_appointment_master_title">Выберите мастера</string>
+    <string name="make_appointment_datetime_title">Выберите дату и время записи</string>
 </resources>
